--- a/css/common.css
+++ b/css/common.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
   }
   
+
   body {
     margin: 16px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
@@ -11,5 +12,11 @@
     background-color: #fafafa;
     color: #212121;
     line-height: 1.5;
+  }
+
+ .container {
+ max-width: 1160px;
+ padding: 0 16px;
+ margin: 0 auto;
   }
   
